--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-#API_BASE_URL=http://192.168.1.84:3000
-API_BASE_URL=   https://josefine-housekeeperlike-arlinda.ngrok-free.dev
+API_BASE_URL=https://museum-api-production-5c3a.up.railway.app
+#API_BASE_URL=   https://josefine-housekeeperlike-arlinda.ngrok-free.dev
 API_TIMEOUT=30
 ENV_NAME=development
